--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set Org Lowercase
+        run: echo "ORG=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: GHCR Login
         uses: docker/login-action@v3
         with:
@@ -32,17 +35,24 @@ jobs:
           push: false
           tags: ghcr.io/${{ toLower(github.repository_owner) }}/newwave4-frontend:${{ github.sha }}
 
+      - name: Docker build for Testing
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          tags: ghcr.io/${{ env.ORG }}/newwave4-frontend:${{ github.sha }}
+
       - name: Docker Image Testing
         run: |
           docker images
           docker run --name newwave4-frontend-app -d \
-          -p 80:80 \
-          ghcr.io/${{ toLower(github.repository_owner) }}/newwave4-frontend:${{ github.sha }}
-
+            -p 80:80 \
+            ghcr.io/${{ env.ORG }}/newwave4-frontend:${{ github.sha }}
+          
           export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' newwave4-frontend-app)
           echo $IP
-
-          echo testing Image URL using wget
+          
+          echo Testing Image URL using wget
           wget -q -O - 127.0.0.1 | grep "New Wave"
 
       - name: Docker push
@@ -50,4 +60,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ toLower(github.repository_owner) }}/newwave4-frontend:${{ github.sha }}
+          tags: ghcr.io/${{ env.ORG }}/newwave4-frontend:${{ github.sha }}
