--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -61,4 +61,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ env.ORG }}/newwave4-frontend:${{ github.sha }}
+          tags: |
+            ghcr.io/${{ env.ORG }}/newwave4-frontend:${{ github.sha }}
+            ghcr.io/${{ env.ORG }}/newwave4-frontend:latest
