--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,10 +86,10 @@ jobs:
 
       - name: Build with Next.js (Static Export)
         run: |
-          # Set the base path dynamically based on the repository name
+          # Set the base path dynamically based on the repository name.
           export NEXT_PUBLIC_BASE_PATH="/$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)"
-          # Run Next.js build in production mode so that next.config.ts uses production settings
-          NODE_ENV=production ${{ steps.detect-package-manager.outputs.runner }} next build
+          # Run the Next.js build. Next.js will internally set NODE_ENV=production.
+          ${{ steps.detect-package-manager.outputs.runner }} next build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
