--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
             exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "command=ci --include=dev" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
             exit 0
           else
@@ -82,6 +82,8 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
 
       - name: Install dependencies
+        env:
+          NODE_ENV: development
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
       - name: Build with Next.js (Static Export)
@@ -90,6 +92,7 @@ jobs:
           export NEXT_PUBLIC_BASE_PATH="/$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)"
           # Run the Next.js build. Next.js will internally set NODE_ENV=production.
           ${{ steps.detect-package-manager.outputs.runner }} next build
+      
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
