Updated deployment workflow to run only on 'development' branch and set environment details for GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,7 @@ jobs:
 
   # Deployment job
   deploy:
-    if: success()
+    if: success() && github.ref == 'refs/heads/development'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
