--- a/.github/workflows/develop_deployment.yml
+++ b/.github/workflows/develop_deployment.yml
@@ -5,16 +5,17 @@
 name: Development
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["development"]
+    workflow_dispatch:
+    branches:
+      - 'development'
+      - 'feature-*'
+      - 'feature/*'    
   pull_request:
-    branches: ["development"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+    branches:
+      - 'feature-*'
+      - 'feature/*'
+  
 permissions:
   contents: read
   pages: write
@@ -27,7 +28,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -99,7 +99,6 @@ jobs:
         with:
           path: ./out
 
-  # Deployment job
   deploy:
     if: success() && github.ref == 'refs/heads/development'
     environment:
