--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -7,6 +7,10 @@ on:
       - main
       - 'feature-*'
       - 'feature/*'
+  pull_request:
+    branches:
+      - 'feature-*'
+      - 'feature/*'
 
 jobs:
   build:
