--- a/.github/workflows/restrict-main-merges.yml
+++ b/.github/workflows/restrict-main-merges.yml
@@ -1,4 +1,4 @@
-name: Enforce Merging from Develop Only
+name: Enforce Merging from Development Only
 
 on:
   pull_request:
@@ -9,10 +9,10 @@ jobs:
   enforce-branch-policy:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if PR is from 'develop' branch
+      - name: Check if PR is from 'development' branch
         run: |
-          if [[ "${{ github.base_ref }}" == "main" && "${{ github.head_ref }}" != "develop" ]]; then
-            echo "❌ PR to main is only allowed from develop."
+          if [[ "${{ github.base_ref }}" == "main" && "${{ github.head_ref }}" != "development" ]]; then
+            echo "❌ PR to main is only allowed from development."
             exit 1
           else
             echo "✅ Merge allowed."
