--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "next": "^15.2.4",
