--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           kubectl create secret docker-registry ghcr-regcred \
             --docker-server=ghcr.io \
             --docker-username=${{ github.repository_owner }} \
-            --docker-password=${{ secrets.GITHUB_TOKEN }} \
+            --docker-password=${{ secrets.GHCR_PAT }} \
             --docker-email=rozdolskyvolodymyr@gmail.com \
             --namespace ${{ env.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
 
