--- a/helm/frontend-chart/values.yaml
+++ b/helm/frontend-chart/values.yaml
@@ -5,10 +5,8 @@
 replicaCount: 1
 
 image:
-  # Replace "yourorg" with your actual GitHub organization name if desired.
   repository: "ghcr.io/newwave4org/newwave4-frontend"
   pullPolicy: IfNotPresent
-  # Default tag, override this with the commit SHA in your workflow
   tag: "latest"
 
 # Define imagePullSecrets to allow Kubernetes to pull from the private GitHub Packages registry.
@@ -21,50 +19,50 @@ fullnameOverride: ""
 
 serviceAccount:
   create: true
-  automount: true
+  automount: false
   annotations: {}
-  name: ""
+  name: "frontend-sa"
 
 podAnnotations: {}
 podLabels: {}
 
-podSecurityContext: {}
-# fsGroup: 2000
+podSecurityContext:
+  fsGroup: 2000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-# runAsUser: 1000
+securityContext:
+   capabilities:
+     drop:
+     - ALL
+   readOnlyRootFilesystem: true
+   runAsNonRoot: true
+   runAsUser: 1000
 
 service:
   type: ClusterIP
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # Example:
-    # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
+  enabled: true
+  className: nginx
+  annotations:
+    kubernetes.io/ingress.class: nginx
   hosts:
-    - host: chart-example.local
+    - host: new.newwave4.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
+  tls:
+    - secretName: frontend-tls-certificate
+      hosts:
+        - new.newwave4.org
 
-resources: {}
-  # Uncomment and adjust if you want to set default resource requests and limits.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-#   memory: 128Mi
+resources:
+   limits:
+     cpu: 100m
+     memory: 128Mi
+   requests:
+     cpu: 100m
+   memory: 128Mi
 
 livenessProbe:
   httpGet:
@@ -76,23 +74,14 @@ readinessProbe:
     port: http
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 5
   targetCPUUtilizationPercentage: 80
 
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
 
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
-nodeSelector: {}
+nodeSelector:
+  kubernetes.io/hostname: newwave4org-node01
 
 tolerations: []
 
