fix: add emptyDir volumes for /var/cache/nginx and /var/run to resolve read-only filesystem errors

--- a/helm/frontend-chart/values.yaml
+++ b/helm/frontend-chart/values.yaml
@@ -86,11 +86,15 @@ tolerations: []
 
 affinity: {}
 
-# Add a writable volume for nginx cache
+# Writable volume for Nginx cache
 volumes:
   - name: nginx-cache
+    emptyDir: {}
+  - name: nginx-run
     emptyDir: {}
 
 volumeMounts:
   - name: nginx-cache
     mountPath: /var/cache/nginx
+  - name: nginx-run
+    mountPath: /var/run
