feat: update Nginx config to serve finish.html as index for /donation/ directory

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,14 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Global catch-all for all other requests
     location / {
         try_files $uri $uri/ /index.html;
+    }
+    # For the /donation/ directory, use finish.html as the index file
+    location /donation/ {
+        index finish.html index.html;
+        try_files $uri $uri/ /donation/finish.html;
     }
 
     error_page 404 /404.html;
