--- a/helm/frontend-chart/values.yaml
+++ b/helm/frontend-chart/values.yaml
@@ -86,15 +86,11 @@ tolerations: []
 
 affinity: {}
 
-# Writable volume for Nginx cache
+# Add a writable volume for nginx cache
 volumes:
   - name: nginx-cache
-    emptyDir: {}
-  - name: nginx-run
     emptyDir: {}
 
 volumeMounts:
   - name: nginx-cache
     mountPath: /var/cache/nginx
-  - name: nginx-run
-    mountPath: /var/run
