--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,9 +5,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+
     location / {
-        try_files $uri $uri/ /index.html;
+        # try_files $uri $uri/ /index.html;
+        rewrite ^/(.+)/$ /$1 permanent;
+        rewrite ^/(.*)/$ /$1.html break;
+        try_files $uri $uri/ $uri.html /index.html;
     }
+
+    
 
     error_page 404 /404.html;
 }
