--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
     location / {
         # try_files $uri $uri/ /index.html;
 
-        try_files $uri $uri/ $uri.html /index.html;
+        try_files $uri $uri.html /index.html;
     }
 
     
