--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    location ~ ^(.+)/$ {
+        return 301 $1;
+    }
+
     location / {
         # try_files $uri $uri/ /index.html;
 
