--- a/.github/workflows/release-helm-chart.yml
+++ b/.github/workflows/release-helm-chart.yml
@@ -54,7 +54,8 @@ jobs:
 
       - name: Package Helm Chart
         run: |
-          helm package newwave4-frontend-chart
+          # Package the chart from the correct directory
+          helm package helm/frontend-chart
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
