chore: update frontend chart version and enhance secret and deployment templates

--- a/helm/frontend-chart/templates/secret.yaml
+++ b/helm/frontend-chart/templates/secret.yaml
@@ -2,7 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-secret
+  {{- if .Values.namespaceOverride }}
   namespace: {{ .Values.namespaceOverride }}
+  {{- end }}
 type: Opaque
 data:
   NEXT_PUBLIC_PAYPAL_CLIENT_ID: {{ .Values.secret.NEXT_PUBLIC_PAYPAL_CLIENT_ID | b64enc }}
