--- a/helm/frontend-chart/templates/deployment.yaml
+++ b/helm/frontend-chart/templates/deployment.yaml
@@ -44,6 +44,9 @@ spec:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
             {{- toYaml .Values.readinessProbe | nindent 12 }}
+          envFrom:
+            - secretRef:
+                name: {{ .Release.Name }}-secret
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
