--- a/.github/workflows/develop_deployment.yml
+++ b/.github/workflows/develop_deployment.yml
@@ -6,16 +6,16 @@ name: Development
 
 on:
   push:
-    workflow_dispatch:
     branches:
       - 'development'
       - 'feature-*'
-      - 'feature/*'    
+      - 'feature/*'
   pull_request:
     branches:
       - 'feature-*'
       - 'feature/*'
-  
+  workflow_dispatch:
+
 permissions:
   contents: read
   pages: write
@@ -24,12 +24,16 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_PAYPAL_CLIENT_ID: ${{ secrets.NEXT_PUBLIC_PAYPAL_CLIENT_ID }}
+      NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEYS: ${{ secrets.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEYS }}
+      NEXT_PUBLIC_NEWWAVE_API_URL: ${{ secrets.NEXT_PUBLIC_NEWWAVE_API_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -53,7 +57,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -92,7 +96,6 @@ jobs:
           export NEXT_PUBLIC_BASE_PATH="/$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)"
           # Run the Next.js build. Next.js will internally set NODE_ENV=production.
           ${{ steps.detect-package-manager.outputs.runner }} next build
-      
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
