--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
     "jsxSingleQuote": false,
     "bracketSpacing": true,
     "trailingComma": "all",
-    "printWidth": 80,
+    "printWidth": false,
     "tabWidth": 2,
     "arrowParens": "avoid",
     "endOfLine": "lf",
