chore: update docker workflow to include fix-* branches in triggers

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -7,10 +7,12 @@ on:
       - main
       - 'feature-*'
       - 'feature/*'
+      - 'fix-*'
   pull_request:
     branches:
       - 'feature-*'
       - 'feature/*'
+      - 'fix-*'
 
 jobs:
   build:
