chore: add check for mis-cased imports and enforce consistent casing, update tsconfig baseUrl setting

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -33,6 +33,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Guard mis-cased imports
+        run: |
+          set -e
+          if grep -RInE "@/components/Payment/|\.\./Payment/" --include=\*.{ts,tsx,js,jsx} app components; then
+            echo "Found mis-cased imports. Use '/components/payment/' everywhere."
+            exit 1
+          fi
 
       - name: Node build sanity check (Linux FS)
         uses: actions/setup-node@v4
