--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "nexlog": "^5.2.2",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
