--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
@@ -21,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
+    "react-calendar-datetime-picker": "^1.7.5",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
