--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Check secrets & Generate .env file
         run: |
+          echo "NEXT_PUBLIC_BASE_PATH=" > .env
           echo "NEXT_PUBLIC_PAYPAL_CLIENT_ID=${{ secrets.NEXT_PUBLIC_PAYPAL_CLIENT_ID }}" >> .env
           echo "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEYS=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEYS }}" >> .env
           echo "NEXT_PUBLIC_NEWWAVE_API_URL=${{ secrets.NEXT_PUBLIC_NEWWAVE_API_URL }}" >> .env
