--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "stripe": "^18.2.1",
+    "uuid": "^13.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
