--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "stripe": "^18.2.1",
     "uuid": "^13.0.0",
     "yup": "^1.6.1"
@@ -43,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
